tests/misc_tests/type_eq_ui_tests/stw_derive_nonexistent-err.rs

typewit::simple_type_witness!{
    derive(Serialize)
    enum NoDerives {U8 = u8, U16 = u16}
}